# smite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Debug.json  Release.json  build_log.txt  fetch_legendary.py
App/: CMakeLists.txt  Main.qml  main.cpp  main.cxx  main.qml
App/Views/: LibraryView.qml  Main.qml  UserView.qml
App/include/: CachingNetworkAccessManager.h
App/include/viewmodels/: LibraryViewModel.h  UserViewModel.h
App/src/: main.cxx  resources.qrc
App/src/ViewModels/: LibraryViewModel.cxx  UserViewModel.cxx
Core/: CMakeLists.txt
Core/include/core/legendary/: models.hpp
Core/src/Commands/: BaseTypes.swift  ImportCommand.swift  LegendaryCommand.swift  ListCommand.swift
Core/src/Runner/: LegendaryRunner.swift
Core/src/common/: Models.swift
Core/src/legendary/: Library.swift  Models+Legendary.swift  Models.swift  Paths.swift  User.swift
Core/src/legendary/Commands/: AuthCommand.swift
Core/src/legendary/Runner/: LegendaryRunner.swift
cmake/modules/: AddSwift.cmake  InitializeSwift.cmake
